Updated lang files for lamps and components

--- a/src/main/resources/assets/warpdrive/lang/en_US.lang
+++ b/src/main/resources/assets/warpdrive/lang/en_US.lang
@@ -12,28 +12,28 @@ death.attack.warpdrive.teleportation.player=%1$s was teleporkilled by %2$s
 death.attack.warpdrive.warm=%1$s died from excessive temperature
 death.attack.warpdrive.warm.player=%1$s was cooked by %2$s
 
-item.warpdrive.crafting.Malformed.name=Bad Item
-item.warpdrive.crafting.EmeraldCrystal.name=Emerald Tuned Crystal
-item.warpdrive.crafting.EnderCrystal.name=Ender Tuned Crystal
-item.warpdrive.crafting.DiamondCrystal.name=Diamond Tuned Crystal
-item.warpdrive.crafting.DiffractionGrating.name=Diffraction Grating
-item.warpdrive.crafting.ReactorCore.name=Reactor Core
-item.warpdrive.crafting.ComputerInterface.name=Computer Interface
-item.warpdrive.crafting.PowerInterface.name=Power Interface
-item.warpdrive.crafting.CapacitiveCrystal.name=Capacitive Crystal
-item.warpdrive.crafting.AirCanisterEmpty.name=Empty Air Canister
-item.warpdrive.crafting.AirCanisterEmpty.tooltip=§bRight click an Air generator§7 to refill me
-item.warpdrive.crafting.Lens.name=Lens
-item.warpdrive.crafting.Zoom.name=Zoom
-item.warpdrive.crafting.GlassTank.name=Glass Tank
-item.warpdrive.crafting.FlatScreen.name=Flat Screen
-item.warpdrive.crafting.MemoryCrystal.name=Memory Crystal
-item.warpdrive.crafting.Motor.name=Motor
-item.warpdrive.crafting.BoneCharcoal.name=Bone Charcoal
-item.warpdrive.crafting.ActivatedCarbon.name=Activated Carbon
-item.warpdrive.crafting.LaserMediumEmpty.name=Laser Medium (empty)
-item.warpdrive.crafting.ElectromagneticProjector.name=Electromagnetic Projector
-item.warpdrive.crafting.CoilCrystal.name=Coil Crystal
+item.warpdrive.component.malformed.name=Bad Item
+item.warpdrive.component.emerald_crystal.name=Emerald Tuned Crystal
+item.warpdrive.component.ender_crystal.name=Ender Tuned Crystal
+item.warpdrive.component.diamond_crystal.name=Diamond Tuned Crystal
+item.warpdrive.component.diffraction_grating.name=Diffraction Grating
+item.warpdrive.component.reactor_core.name=Reactor Core
+item.warpdrive.component.computer_interface.name=Computer Interface
+item.warpdrive.component.power_interface.name=Power Interface
+item.warpdrive.component.capacitive_crystal.name=Capacitive Crystal
+item.warpdrive.component.air_canister_empty.name=Empty Air Canister
+item.warpdrive.component.air_canister_empty.tooltip=§bRight click an Air generator§7 to refill me
+item.warpdrive.component.lens.name=Lens
+item.warpdrive.component.zoom.name=Zoom
+item.warpdrive.component.glass_tank.name=Glass Tank
+item.warpdrive.component.flat_screen.name=Flat Screen
+item.warpdrive.component.memory_crystal.name=Memory Crystal
+item.warpdrive.component.motor.name=Motor
+item.warpdrive.component.bone_charcoal.name=Bone Charcoal
+item.warpdrive.component.activated_carbon.name=Activated Carbon
+item.warpdrive.component.laser_medium_empty.name=Laser Medium (empty)
+item.warpdrive.component.electromagnetic_projector.name=Electromagnetic Projector
+item.warpdrive.component.coil_crystal.name=Coil Crystal
 
 item.warpdrive.armor.AirCanisterFull.name=Air Canister
 item.warpdrive.armor.Helmet.name=Warp Helmet
@@ -142,12 +142,15 @@ item.warpdrive.tool.TuningFork.use.setBeamFrequency=%1$s is now aligned with Bea
 
 
 tile.warpdrive.passive.Air.name=Air Block
-tile.warpdrive.passive.Energized.name=Energized Block
+tile.warpdrive.passive.Decorative.energized.name=Energized Block
+tile.warpdrive.passive.Decorative.network.name=Network Block
+tile.warpdrive.passive.Decorative.plain.name=Plain Block
 tile.warpdrive.passive.Gas.name=Gas Block
 tile.warpdrive.passive.IridiumBlock.name=Iridium Block
 tile.warpdrive.passive.HighlyAdvancedMachine.name=Highly Advanced Machine Block
-tile.warpdrive.passive.Network.name=Network Block
-tile.warpdrive.passive.Plain.name=Plain Block
+tile.warpdrive.passive.lamp_bubble.name=Bubble Lamp
+tile.warpdrive.passive.lamp_flat.name=Flat Lamp
+tile.warpdrive.passive.lamp_long.name=Long Lamp
 tile.warpdrive.passive.TransportBeacon.name=Transport Beacon
 
 tile.warpdrive.machines.AirGenerator.name=Air Generator
