--- a/src/main/resources/assets/warpdrive/lang/fr_FR.lang
+++ b/src/main/resources/assets/warpdrive/lang/fr_FR.lang
@@ -12,28 +12,28 @@ death.attack.warpdrive.teleportation.player=%1$s a été tué par %2$s durant sa
 death.attack.warpdrive.warm=%1$s est mort de brûlure sévère
 death.attack.warpdrive.warm.player=%1$s a été cuit par %2$s
 
-item.warpdrive.crafting.Malformed.name=Item invalide
-item.warpdrive.crafting.EmeraldCrystal.name=Cristal d'émeraude accordé
-item.warpdrive.crafting.EnderCrystal.name=Cristal de l'ender accordé
-item.warpdrive.crafting.DiamondCrystal.name=Cristal de diamond accordé
-item.warpdrive.crafting.DiffractionGrating.name=Réseau de diffraction
-item.warpdrive.crafting.ReactorCore.name=Noyeau de réacteur
-item.warpdrive.crafting.ComputerInterface.name=Interface informatique
-item.warpdrive.crafting.PowerInterface.name=Power Interface
-item.warpdrive.crafting.CapacitiveCrystal.name=Cristal capacitif
-item.warpdrive.crafting.AirCanisterEmpty.name=Cartouche d'air vide
-item.warpdrive.crafting.AirCanisterEmpty.tooltip=§bClique droit sur un Générateur d'air§r pour me remplir
-item.warpdrive.crafting.Lens.name=Lentille
-item.warpdrive.crafting.Zoom.name=Zoom
-item.warpdrive.crafting.GlassTank.name=Réservoir en verre
-item.warpdrive.crafting.FlatScreen.name=Ecran plat
-item.warpdrive.crafting.MemoryCrystal.name=Cristal de mémoire
-item.warpdrive.crafting.Motor.name=Moteur
-item.warpdrive.crafting.BoneCharcoal.name=Charbon d'ossements
-item.warpdrive.crafting.ActivatedCarbon.name=Charbon actif
-item.warpdrive.crafting.LaserMediumEmpty.name=Milieu amplificateur (vide)
-item.warpdrive.crafting.ElectromagneticProjector.name=Projecteur électromagnétique
-item.warpdrive.crafting.CoilCrystal.name=Cristal bobiné
+item.warpdrive.component.malformed.name=Item invalide
+item.warpdrive.component.emeraldCrystal.name=Cristal d'émeraude accordé
+item.warpdrive.component.enderCrystal.name=Cristal de l'ender accordé
+item.warpdrive.component.diamondCrystal.name=Cristal de diamond accordé
+item.warpdrive.component.diffractionGrating.name=Réseau de diffraction
+item.warpdrive.component.reactorCore.name=Noyeau de réacteur
+item.warpdrive.component.computerInterface.name=Interface informatique
+item.warpdrive.component.powerInterface.name=Power Interface
+item.warpdrive.component.capacitiveCrystal.name=Cristal capacitif
+item.warpdrive.component.airCanisterEmpty.name=Cartouche d'air vide
+item.warpdrive.component.airCanisterEmpty.tooltip=§bClique droit sur un Générateur d'air§r pour me remplir
+item.warpdrive.component.lens.name=Lentille
+item.warpdrive.component.zoom.name=Zoom
+item.warpdrive.component.glassTank.name=Réservoir en verre
+item.warpdrive.component.flatScreen.name=Ecran plat
+item.warpdrive.component.memoryCrystal.name=Cristal de mémoire
+item.warpdrive.component.motor.name=Moteur
+item.warpdrive.component.boneCharcoal.name=Charbon d'ossements
+item.warpdrive.component.activatedCarbon.name=Charbon actif
+item.warpdrive.component.laserMediumEmpty.name=Milieu amplificateur (vide)
+item.warpdrive.component.electromagneticProjector.name=Projecteur électromagnétique
+item.warpdrive.component.coilCrystal.name=Cristal bobiné
 
 item.warpdrive.armor.AirCanisterFull.name=Cartouche d'air
 item.warpdrive.armor.Helmet.name=Casque warp
@@ -148,6 +148,9 @@ tile.warpdrive.passive.IridiumBlock.name=Bloc d'iridium
 tile.warpdrive.passive.HighlyAdvancedMachine.name=Bloc de machine hyper avancé
 tile.warpdrive.passive.Network.name=Bloc de réseau
 tile.warpdrive.passive.Plain.name=Bloc ordinaire
+tile.warpdrive.passive.lamp_bubble.name=Lampe bulle
+tile.warpdrive.passive.lamp_flat.name=Lampe plate
+tile.warpdrive.passive.lamp_long.name=Lamp allongée
 tile.warpdrive.passive.TransportBeacon.name=Balise de transport
 
 tile.warpdrive.machines.AirGenerator.name=Générateur d'air
