--- a/src/main/resources/assets/warpdrive/lang/de_DE.lang
+++ b/src/main/resources/assets/warpdrive/lang/de_DE.lang
@@ -12,28 +12,28 @@ death.attack.warpdrive.teleportation.player=%1$s wurde durch %2$s beim teleporti
 death.attack.warpdrive.warm=%1$s verglühte
 death.attack.warpdrive.warm.player=%1$s wurde von %2$s gebruzelt
 
-item.warpdrive.crafting.Malformed.name=Korruptes Item
-item.warpdrive.crafting.EmeraldCrystal.name=Smaragdkristall
-item.warpdrive.crafting.EnderCrystal.name=Enderkristall
-item.warpdrive.crafting.DiamondCrystal.name=Diamantkristall
-item.warpdrive.crafting.DiffractionGrating.name=Beugungsgitter
-item.warpdrive.crafting.ReactorCore.name=Reaktorkern
-item.warpdrive.crafting.ComputerInterface.name=Computer Schnittstelle
-item.warpdrive.crafting.PowerInterface.name=Power Schnittstelle
-item.warpdrive.crafting.CapacitiveCrystal.name=Kapazitätskristall
-item.warpdrive.crafting.AirCanisterEmpty.name=Leerer Luftkanister
-item.warpdrive.crafting.AirCanisterEmpty.tooltip=§bRechtsklicke einen Luftgenerator um mich zu füllen
-item.warpdrive.crafting.Lens.name=Linse
-item.warpdrive.crafting.Zoom.name=Zoom
-item.warpdrive.crafting.GlassTank.name=Glas Tank
-item.warpdrive.crafting.FlatScreen.name=Flat Screen
-item.warpdrive.crafting.MemoryCrystal.name=Speicherkristall
-item.warpdrive.crafting.Motor.name=Motor
-item.warpdrive.crafting.BoneCharcoal.name=Knochenkohle
-item.warpdrive.crafting.ActivatedCarbon.name=Aktivkohle
-item.warpdrive.crafting.LaserMediumEmpty.name=Medium Laser (leer)
-item.warpdrive.crafting.ElectromagneticProjector.name=Elektromagnetischer Projektor
-item.warpdrive.crafting.CoilCrystal.name=Spulenkristall
+item.warpdrive.component.malformed.name=Korruptes Item
+item.warpdrive.component.emeraldCrystal.name=Smaragdkristall
+item.warpdrive.component.enderCrystal.name=Enderkristall
+item.warpdrive.component.diamondCrystal.name=Diamantkristall
+item.warpdrive.component.diffractionGrating.name=Beugungsgitter
+item.warpdrive.component.reactorCore.name=Reaktorkern
+item.warpdrive.component.computerInterface.name=Computer Schnittstelle
+item.warpdrive.component.powerInterface.name=Power Schnittstelle
+item.warpdrive.component.capacitiveCrystal.name=Kapazitätskristall
+item.warpdrive.component.airCanisterEmpty.name=Leerer Luftkanister
+item.warpdrive.component.airCanisterEmpty.tooltip=§bRechtsklicke einen Luftgenerator um mich zu füllen
+item.warpdrive.component.lens.name=Linse
+item.warpdrive.component.zoom.name=Zoom
+item.warpdrive.component.glassTank.name=Glas Tank
+item.warpdrive.component.flatScreen.name=Flat Screen
+item.warpdrive.component.memoryCrystal.name=Speicherkristall
+item.warpdrive.component.motor.name=Motor
+item.warpdrive.component.boneCharcoal.name=Knochenkohle
+item.warpdrive.component.activatedCarbon.name=Aktivkohle
+item.warpdrive.component.laserMediumEmpty.name=Medium Laser (leer)
+item.warpdrive.component.electromagneticProjector.name=Elektromagnetischer Projektor
+item.warpdrive.component.coilCrystal.name=Spulenkristall
 
 item.warpdrive.armor.AirCanisterFull.name=Luftkanister
 item.warpdrive.armor.Helmet.name=Warp Helm
@@ -148,6 +148,9 @@ tile.warpdrive.passive.IridiumBlock.name=Iridium Block
 tile.warpdrive.passive.HighlyAdvancedMachine.name=Stark weiterentwickelter Maschinen Block
 tile.warpdrive.passive.Network.name=Netzwerk Block
 tile.warpdrive.passive.Plain.name=Ebenen Block
+tile.warpdrive.passive.lamp_bubble.name=Bubble Lamp **
+tile.warpdrive.passive.lamp_flat.name=Flat Lamp **
+tile.warpdrive.passive.lamp_long.name=Long Lamp **
 tile.warpdrive.passive.TransportBeacon.name=Transport Leuchtfeuer
 
 tile.warpdrive.machines.AirGenerator.name=Luftgenerator
