--- a/src/main/resources/assets/warpdrive/lang/fr_FR.lang
+++ b/src/main/resources/assets/warpdrive/lang/fr_FR.lang
@@ -74,8 +74,8 @@ item.warpdrive.forcefield.upgrade.heating.name=Augmentation de chauffage
 item.warpdrive.forcefield.upgrade.heating.tooltip=Chauffe les blocs et entités. Ajoutes en d'autres pour accroître l'effet. Ajoute une inversion pour un effet de zone ou terraformation.
 item.warpdrive.forcefield.upgrade.inversion.name=Augmentation d'inversion
 item.warpdrive.forcefield.upgrade.inversion.tooltip=§4En cours d'implémentation\nModifie la zone d'effet de surface en volume. Utilise le pour cibler des entités à l'intérieur du champ ou effectuer une terraformation.
-item.warpdrive.forcefield.upgrade.itemPort.name=Augmentation de port d'item
-item.warpdrive.forcefield.upgrade.itemPort.tooltip=S'interface avec des conteneurs attachés. Ajoutes une Augmentation d'attraction pour collecter les items du Casseur de block. Ajoutes une augmentation de répulsion pour fournir les blocks à placer avec l'augmentation de stabilisation.
+item.warpdrive.forcefield.upgrade.item_port.name=Augmentation de port d'item
+item.warpdrive.forcefield.upgrade.item_port.tooltip=S'interface avec des conteneurs attachés. Ajoutes une Augmentation d'attraction pour collecter les items du Casseur de block. Ajoutes une augmentation de répulsion pour fournir les blocks à placer avec l'augmentation de stabilisation.
 item.warpdrive.forcefield.upgrade.pumping.name=Augmentation de pompage
 item.warpdrive.forcefield.upgrade.pumping.tooltip=§4En cours d'implémentation\nPompe des liquides à l'emplacement du champ de force. Ajoute d'autres pompes pour supporter des fluides plus visceux tels que la lave.
 item.warpdrive.forcefield.upgrade.range.name=Augmentation de portée
@@ -409,7 +409,7 @@ warpdrive.forcefield.upgrade.statusLine.cooling=refroidissement
 warpdrive.forcefield.upgrade.statusLine.fusion=fusion
 warpdrive.forcefield.upgrade.statusLine.heating=chauffage
 warpdrive.forcefield.upgrade.statusLine.inversion=inversion
-warpdrive.forcefield.upgrade.statusLine.itemPort=port d'item
+warpdrive.forcefield.upgrade.statusLine.item_port=port d'item
 warpdrive.forcefield.upgrade.statusLine.pumping=pompe
 warpdrive.forcefield.upgrade.statusLine.range=portée
 warpdrive.forcefield.upgrade.statusLine.repulsion=répulsion
