--- a/src/main/resources/assets/warpdrive/lang/ru_RU.lang
+++ b/src/main/resources/assets/warpdrive/lang/ru_RU.lang
@@ -243,7 +243,9 @@ tile.warpdrive.forcefield.relay3.tooltip=Supports up to 1 force field upgrade sh
 
 tile.warpdrive.movement.Lift.name=Лифт
 tile.warpdrive.movement.ShipController.name=Контроллер корабля
+tile.warpdrive.movement.ShipController.tooltip=Defines your ship front relative to the core. Attach a computer to open the user interface.\nShall be placed horizontally directly next to the Ship core.
 tile.warpdrive.movement.ShipCore.name=Ядро корабля
+tile.warpdrive.movement.ShipCore.tooltip=Defines your ship center relative to the controller. Connecting an energy source will charge the core.\nShall be placed horizontally directly next to the Ship controller.
 tile.warpdrive.movement.Transporter.name=Транспортер
 
 tile.warpdrive.weapon.LaserCamera.name=Камера с прикрепленным лазером
