--- a/src/main/resources/assets/warpdrive/lang/de_DE.lang
+++ b/src/main/resources/assets/warpdrive/lang/de_DE.lang
@@ -447,7 +447,7 @@ warpdrive.control_channel.get=Control channel %2$d has been retrieved from %1$s 
 warpdrive.control_channel.set=%1$s is now tuned with Control channel %2$d !!!
 warpdrive.control_channel.statusLine.valid=Control channel %1$d is valid. !!!
 warpdrive.control_channel.statusLine.invalid=§cControl channel %1$d is invalid. !!!
-warpdrive.control_channel.statusLine.undefined=§7Undefined Video channel.\n§bUse a Tuning fork§r to set it. !!!
+warpdrive.control_channel.statusLine.undefined=§7Undefined Control channel.\n§bUse a Tuning fork§r to set it. !!!
 
 warpdrive.forcefield.guide.lowPower=Uns geht die Energie aus, Captain. Verringere unseren Energieverbrauch oder hol den schottischen Ingenieur!
 
